# kontrollfluss_git

./: README.md  aufgaben.qmd
05/: aufgaben.qmd
05/input/: input.txt
05/source/: CMakeLists.txt  in_out.cpp  integrate.cpp  overload.cpp
source/: CMakeLists.txt  csv  csv.cpp  math  math.cpp  math1.cpp  multitabelle  multitabelle.cpp  output.csv  prim.cpp  taschenrechner.cpp  vergleich  vergleich.cpp  wurzel.cpp
